# relife-technical-service

./: README.md  Taskfile.yml  pyproject.toml
.github/workflows/: docker-publish.yml  smoke-test.yml
src/relife_technical/: __init__.py  app.py
src/relife_technical/auth/: dependencies.py  keycloak.py
src/relife_technical/config/: logging.py  settings.py
src/relife_technical/models/: auth.py  ee.py  examples.py  fv.py  mcda.py  rei.py  sei.py  uc.py
src/relife_technical/routes/: auth.py  ee.py  examples.py  fv.py  health.py  mcda.py  rei.py  sei.py  uc.py
src/relife_technical/scripts/: validate_supabase.py
src/relife_technical/services/: ee.py  fv.py  mcda_topsis.py  rei.py  sei.py  test_mcda.ipynb  test_npy.ipynb  uc.py
tests/: conftest.py  test_app.py  test_auth_simple.py  test_health.py  test_mcda.py  test_storage_simple.py  test_universal_auth.py
